@@ -45,6 +45,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="System.Windows.Controls.Primitives\BulletDecorator.cs" />
     <Compile Include="System.Windows.Controls.Primitives\ButtonBase.cs" />
+    <Compile Include="System.Windows.Controls.Primitives\RangeBase.cs" />
     <Compile Include="System.Windows.Controls.Primitives\Thumb.cs" />
     <Compile Include="System.Windows.Controls.Primitives\TickBar.cs" />
     <Compile Include="System.Windows.Controls.Primitives\ScrollBar.cs" />
